--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://jitachi.up.railway.app/'
 languageCode = 'en-us'
-title = 'Jitachi Debug'
+title = 'Jitachi Garcia'
 theme = 'blank'
