--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,10 @@ baseURL = 'https://jitachi.up.railway.app/'
 languageCode = 'en-us'
 title = 'Jitachi Garcia'
 theme = 'blank'
+
+[Menu]
+ [[menu.Main]]
+  identifier = "about"
+  name = "About"
+  url = "/about"
+  weight = 2
