--- a/hugo-dev.toml
+++ b/hugo-dev.toml
@@ -2,3 +2,10 @@ baseURL = 'https://hugo-staging.up.railway.app/'
 languageCode = 'en-us'
 title = 'Jitachi Development'
 theme = 'blank'
+
+[Menu]
+ [[menu.Main]]
+  identifier = "about"
+  name = "About"
+  url = "/about"
+  weight = 1
