more menu changes

--- a/hugo-dev.toml
+++ b/hugo-dev.toml
@@ -2,11 +2,11 @@ baseURL = 'https://hugo-staging.up.railway.app/'
 languageCode = 'en-us'
 title = 'Jitachi Development'
 theme = 'blank'
-sectionPagesMenu = 'main'
 
-[Menu]
- [[menu.Main]]
-  identifier = "about"
-  name = "About"
-  url = "/about/"
-  weight = 1
+[Menu]  
+  [[menu.main]]
+    name = "about hugo"
+    pre = "<i class='fa fa-heart'></i>"
+    weight = -110
+    identifier = "about"
+    url = "/about/"
