--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,9 @@ baseURL = 'https://jitachi.up.railway.app/'
 languageCode = 'en-us'
 title = 'Jitachi Garcia'
 theme = 'blank'
+
+[markup.goldmark.parser]
+  wrapStandAloneImageWithinParagraph = false
+
+[markup.goldmark.renderer]
+  unsafe = true
