one more about iteration

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,5 +6,9 @@ theme = 'blank'
 [markup.goldmark.parser]
   wrapStandAloneImageWithinParagraph = false
 
+[markup.goldmark.parser.attribute]
+  block = true
+  title = true
+
 [markup.goldmark.renderer]
   unsafe = true
