--- a/hugo-dev.toml
+++ b/hugo-dev.toml
@@ -5,5 +5,10 @@ theme = 'blank'
 
 [markup.goldmark.parser]
   wrapStandAloneImageWithinParagraph = false
+
+[markup.goldmark.parser.attribute]
+  block = true
+  title = true
+
 [markup.goldmark.renderer]
   unsafe = true
