--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://jitachi.up.railway.app/'
+baseURL = 'https://jitachi.com/'
 languageCode = 'en-us'
 title = 'Jitachi Garcia'
 theme = 'blank'
