add favicon + little tweaks

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://jitachi.com/'
 languageCode = 'en-us'
-title = 'Jitachi Garcia'
+title = 'Jitachi'
 theme = 'blank'
 
 [markup.goldmark.parser]
