--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "tailwindcss": "^4.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "cd themes/blank && npm run build",
+    "prebuild": "npm run build:css"
   },
   "keywords": [],
   "author": "",
