remove railway.json and update package.json

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "cd themes/blank && npm install && npm run build",
-    "build": "npm run build:css",
-    "start": "hugo server --bind 0.0.0.0 --port $PORT --environment production"
+    "build": "npm run build:css"
   },
   "keywords": [],
   "author": "",
